added deep learning thing

--- a/index.html
+++ b/index.html
@@ -989,6 +989,24 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="Machine Learning & A.I.">
+              <a href="https://github.com/lddavila/clustering_neuron_spikes_with_deep_learning/tree/main/Neural_Networks/NN_training_scripts">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/numbers.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Classification through Deep-Learning</h3>
+
+                <p class="project-category">Machine Learning & A.I.</p>
+
+              </a>
+            </li>
+
           </ul>
 
         </section>
