--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="Applications">
               <a href="https://github.com/lddavila/upload_to_harvard_dataverse">
 
                 <figure class="project-img">
