--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
               </a>
             </li>
     
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="Publications">
               <a href="https://github.com/lddavila/upload_to_harvard_dataverse">
 
                 <figure class="project-img">
