added app to my portfolio

--- a/index.html
+++ b/index.html
@@ -1006,6 +1006,24 @@
 
               </a>
             </li>
+
+            <li class="project-item  active" data-filter-item data-category="Applications">
+              <a href="https://github.com/lddavila/clustering_neuron_spikes_with_deep_learning/blob/kilosort_sim/Utility_Functions/postprocessing/data_analysis_app.mlapp">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/data_app.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Dashboards</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
    
             
 
