added database stuff to portfolio

--- a/index.html
+++ b/index.html
@@ -757,12 +757,16 @@
         <section class="projects">
 
           <ul class="filter-list">
-            <li class="filter-item">
-              <button data-filter-btn>Machine Learning & A.I.</button>
-            </li>
+            
 
             <li class="filter-item">
               <button class="active" data-filter-btn>All</button>
+            </li>
+            <li class="filter-item">
+              <button data-filter-btn>Machine Learning & A.I.</button>
+            </li>
+            <li class="filter-item">
+              <button data-filter-btn>Database</button>
             </li>
 
             <li class="filter-item">
@@ -775,6 +779,7 @@
             <li class="filter-item">
               <button data-filter-btn>Features</button>
             </li>
+
 
             
 
@@ -793,12 +798,17 @@
             </button>
 
             <ul class="select-list">
+
+
+              <li class="select-item">
+                <button data-select-item>All</button>
+              </li>
               <li class="select-item">
                 <button data-select-item>Machine Learning & A.I.</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>All</button>
+                <button data-select-item>Database</button>
               </li>
 
               <li class="select-item">
@@ -857,7 +867,25 @@
               </a>
 
             </li>
-                        <li class="project-item  active" data-filter-item data-category="Applications">
+            <li class="project-item  active" data-filter-item data-category="Database">
+              <a href="https://github.com/lddavila/UTEP-Brain-Computation-Lab-Remote-Databases-and-Serendipity-App/blob/main/README.docx">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/database.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Remote Database Work</h3>
+
+                <p class="project-category">Database</p>
+
+              </a>
+
+            </li>
+              <li class="project-item  active" data-filter-item data-category="Applications">
               <a href="https://github.com/lddavila/clustering_neuron_spikes_with_deep_learning/blob/kilosort_sim/Utility_Functions/postprocessing/data_analysis_app.mlapp">
 
                 <figure class="project-img">
