added ml hyperlink

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
 
           <ul class="service-list">
 
+            <a href="#filter-ml">
             <li class="service-item">
 
               <div class="service-icon-box">
@@ -217,6 +218,7 @@
               </div>
 
               <div class="service-content-box">
+                
                 <h4 class="h4 service-item-title">Machine Learning & A.I.</h4>
 
                 <p class="service-item-text">
@@ -224,6 +226,7 @@
                 </p>
               </div>
             </li>
+            </a>
              <li class="service-item">
 
               <div class="service-icon-box">
@@ -560,21 +563,21 @@
               <button class="active" data-filter-btn>All</button>
             </li>
             <li class="filter-item">
-              <button data-filter-btn>Machine Learning & A.I.</button>
+              <button id = "filter-ml" data-filter-btn>Machine Learning & A.I.</button>
             </li>
             <li class="filter-item">
-              <button data-filter-btn>Database</button>
-            </li>
-
-            <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button id = "Database" data-filter-btn>Database</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Publications</button>
+              <button id ="Applications" data-filter-btn>Applications</button>
+            </li>
+
+            <li class="filter-item">
+              <button id="PUBLICATIONS" data-filter-btn>Publications</button>
             </li>
             <li class="filter-item">
-              <button data-filter-btn>Features</button>
+              <button id="features" data-filter-btn>Features</button>
             </li>
 
 
