--- a/index.html
+++ b/index.html
@@ -763,18 +763,18 @@
               <button class="active" data-filter-btn>All</button>
             </li>
             <li class="filter-item">
-              <button data-filter-btn>Machine Learning & A.I.</button>
+              <button id="filter-ml" data-filter-btn>Machine Learning & A.I.</button>
             </li>
             <li class="filter-item">
-              <button data-filter-btn>Database</button>
-            </li>
-
-            <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button id="filter-db" data-filter-btn>Database</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Publications</button>
+              <button id="filter-apps" data-filter-btn>Applications</button>
+            </li>
+
+            <li class="filter-item">
+              <button if="filter-pubs" data-filter-btn>Publications</button>
             </li>
             <li class="filter-item">
               <button data-filter-btn>Features</button>
