added link to portfolio

--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
               </div>
 
               <div class="service-content-box">
+                <a href="#filter-ml">
                 <h4 class="h4 service-item-title">Machine Learning & A.I.</h4>
-
+                </a>
                 <p class="service-item-text">
                   From reinforcement learning, to compuster vision and deep learning I can build and deploy models to suit your needs.
                 </p>
