modified linking behavior

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
               </div>
 
               <div class="service-content-box">
-                <a href="#filter-ml">
-                <h4 class="h4 service-item-title">Machine Learning & A.I.</h4>
+                <a class="service-link" href="#filter-ml" data-service-link data-target-filter="filter-ml">
+                  <h4 class="h4 service-item-title">Machine Learning & A.I.</h4>
                 </a>
                 <p class="service-item-text">
                   From reinforcement learning, to compuster vision and deep learning I can build and deploy models to suit your needs.
@@ -233,7 +233,9 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Research</h4>
+                <a class="service-link" href="#filter-pubs" data-service-link data-target-filter="filter-pubs">
+                  <h4 class="h4 service-item-title">Research</h4>
+                </a>
 
                 <p class="service-item-text">
                   Staying up to date on the latest research is key to solving complex problems. I'm experienced conducting literature reviews, designing experiments, and writing.
@@ -249,7 +251,9 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Statistical Modeling and Analysis</h4>
+                <a class="service-link" href="#filter-db" data-service-link data-target-filter="filter-db">
+                  <h4 class="h4 service-item-title">Statistical Modeling and Analysis</h4>
+                </a>
 
                 <p class="service-item-text">
                   Data talks even though we can't always understand it. I can help you make sense of your data through statistical modeling and analysis.
@@ -265,7 +269,9 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Parallel/Distributed Programming</h4>
+                <a class="service-link" href="#filter-apps" data-service-link data-target-filter="filter-apps">
+                  <h4 class="h4 service-item-title">Parallel/Distributed Programming</h4>
+                </a>
 
                 <p class="service-item-text">
                   Speed up existing pipelines through parallelization and optimization.
@@ -281,7 +287,9 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <a class="service-link" href="#filter-features" data-service-link data-target-filter="filter-features">
+                  <h4 class="h4 service-item-title">Web design</h4>
+                </a>
 
                 <p class="service-item-text">
                   The most modern and high-quality design made at a professional level.
@@ -297,7 +305,9 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <a class="service-link" href="#filter-apps" data-service-link data-target-filter="filter-apps">
+                  <h4 class="h4 service-item-title">Web development</h4>
+                </a>
 
                 <p class="service-item-text">
                   High-quality development of sites at the professional level.
@@ -313,7 +323,9 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <a class="service-link" href="#filter-apps" data-service-link data-target-filter="filter-apps">
+                  <h4 class="h4 service-item-title">Mobile apps</h4>
+                </a>
 
                 <p class="service-item-text">
                   Professional development of applications for iOS and Android.
@@ -775,10 +787,10 @@
             </li>
 
             <li class="filter-item">
-              <button if="filter-pubs" data-filter-btn>Publications</button>
+              <button id="filter-pubs" data-filter-btn>Publications</button>
             </li>
             <li class="filter-item">
-              <button data-filter-btn>Features</button>
+              <button id="filter-features" data-filter-btn>Features</button>
             </li>
 
 
