--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                   <h4 class="h4 service-item-title">Machine Learning & A.I.</h4>
                 </a>
                 <p class="service-item-text">
-                  From reinforcement learning, to compuster vision and deep learning I can build and deploy models to suit your needs.
+                  From reinforcement learning, to computer vision and deep learning I can build and deploy models to suit your needs.
                 </p>
               </div>
             </li>
