--- a/index.html
+++ b/index.html
@@ -216,14 +216,16 @@
                  alt="design icon" width="40">
               </div>
 
+              <a class="service-link" href="#filter-ml" data-service-link data-target-filter="filter-ml"></a>
               <div class="service-content-box">
-                <a class="service-link" href="#filter-ml" data-service-link data-target-filter="filter-ml">
+                
                   <h4 class="h4 service-item-title">Machine Learning & A.I.</h4>
-                </a>
+                
                 <p class="service-item-text">
                   From reinforcement learning, to computer vision and deep learning I can build and deploy models to suit your needs.
                 </p>
               </div>
+              </a>
             </li>
              <li class="service-item">
 
