moved the hyperlink placement

--- a/index.html
+++ b/index.html
@@ -215,8 +215,7 @@
                 <img src="./assets/images/ML_Image.png"
                  alt="design icon" width="40">
               </div>
-
-              <a class="service-link" href="#filter-ml" data-service-link data-target-filter="filter-ml"></a>
+              <a class="service-link" href="#filter-ml" data-service-link data-target-filter="filter-ml">
               <div class="service-content-box">
                 
                   <h4 class="h4 service-item-title">Machine Learning & A.I.</h4>
