changed the hyperlink

--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
             </li>
     
             <li class="project-item  active" data-filter-item data-category="Publications">
-              <a href="https://github.com/lddavila/upload_to_harvard_dataverse">
+              <a href="https://www.nature.com/articles/s42003-024-06489-8">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
