--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               
             </li>
             </a>
-            <a class="service-link" href="#filter-pubs" data-service-link data-target-filter="filter-pubs"></a>
+            <a class="service-link" href="#filter-pubs" data-service-link data-target-filter="filter-pubs">
              <li class="service-item">
 
               <div class="service-icon-box">
@@ -248,7 +248,7 @@
             </a>
 
 
-            <a class="service-link" href="#filter-db" data-service-link data-target-filter="filter-db"></a>
+            <a class="service-link" href="#filter-db" data-service-link data-target-filter="filter-db">
             <li class="service-item">
               <div class="service-icon-box">
                 <img src="./assets/images/statistics_image.png"
@@ -267,7 +267,7 @@
             </li>
             </a>
 
-            <a class="service-link" href="#filter-apps" data-service-link data-target-filter="filter-apps"></a>
+            <a class="service-link" href="#filter-apps" data-service-link data-target-filter="filter-apps">
             <li class="service-item">
 
               <div class="service-icon-box">
@@ -287,7 +287,7 @@
             </li>
             </a>
 
-            <a class="service-link" href="#filter-features" data-service-link data-target-filter="filter-features"></a>
+            <a class="service-link" href="#filter-features" data-service-link data-target-filter="filter-features">
             <li class="service-item">
 
               <div class="service-icon-box">
@@ -308,7 +308,7 @@
             </li>
             </a>
 
-            <a class="service-link" href="#filter-apps" data-service-link data-target-filter="filter-apps"></a>
+            <a class="service-link" href="#filter-apps" data-service-link data-target-filter="filter-apps">
             <li class="service-item">
 
               <div class="service-icon-box">
@@ -328,7 +328,7 @@
             </li>
             </a>
 
-            <a class="service-link" href="#filter-apps" data-service-link data-target-filter="filter-apps"></a>
+            <a class="service-link" href="#filter-apps" data-service-link data-target-filter="filter-apps">
             <li class="service-item">
 
               <div class="service-icon-box">
