--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </li>
             </a>
 
-            <a class="service-link" href="https://github.com/lddavila/clustering_neuron_spikes_with_deep_learning">
+            <a href="https://github.com/lddavila/clustering_neuron_spikes_with_deep_learning">
             <li class="service-item">
 
               <div class="service-icon-box">
